--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,7 +26,7 @@
         Search: <input type="text" name="txtName" id="" placeholder="Enter your name...">
         <input type="submit" value="Research">
     </form>
-    <div style="color: antiquewhite;">
+    <div style="background-color: antiquewhite;">
         <table class="table table-hover" border="2">
             <tr align="center">
                 <td>Id</td>
