--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,13 +28,15 @@
     </form>
     <div style="background-color: antiquewhite;">
         <table class="table table-hover" border="2">
-            <tr align="center">
-                <td>Id</td>
-                <td>Name</td>
-                <td>Type</td>
-                <td>Price(VND)</td>
-                <td>Delete</td>
-            </tr>
+            <thead>
+                <tr align="center">
+                    <td>Id</td>
+                    <td>Name</td>
+                    <td>Type</td>
+                    <td>Price(VND)</td>
+                    <td>Delete</td>
+                </tr>
+            </thead>
             {{#each model}}
             <tr align="center">
                 <td>{{_id}}</td>
