--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <title>Document</title>
+    <title>ATN All Product</title>
 </head>
 
 <style>
@@ -24,7 +24,7 @@
     <button><a href="/">Home Page</a></button>
     <form action="/Research" method="get">
         Search: <input type="text" name="txtName" id="" placeholder="Enter your name...">
-        <input type="submit" value="Research">
+        <input type="submit" value="Search">
     </form>
     <div style="background-color: antiquewhite;">
         <table class="table table-hover" border="2">
