--- a/views/insert.hbs
+++ b/views/insert.hbs
@@ -24,11 +24,21 @@
         background-image: url("/images/3.jpg");
         background-size: cover;
     }
+
+    .demo {
+        background-color: antiquewhite;
+        margin: 0px, auto;
+        border-radius: 10px;
+        width: 400px;
+        align-self: center;
+    }
 </style>
 
 <body>
     <div class="container">
-        <h1 align="center">ADD PRODUCT</h1>
+        <div class="demo">
+            <h1 align="center">ADD PRODUCT</h1>
+        </div>
         <table style="margin-left: 180px; margin-top: 150px;">
             <form action="doInsert" method="POST">
                 <tr>
