--- a/views/insert.hbs
+++ b/views/insert.hbs
@@ -36,7 +36,7 @@
 
 <body>
     <div class="container">
-        <div class="demo">
+        <div style="margin-left: 400px;" class="demo">
             <h1 align="center">ADD PRODUCT</h1>
         </div>
         <table style="margin-left: 180px; margin-top: 150px;">
