--- a/views/insert.hbs
+++ b/views/insert.hbs
@@ -47,6 +47,7 @@
                 <tr>
                     <td style="color: snow;">Product Name</td>
                     <td><input type="text" name="txtName" required></td>
+                    <label id="lblNameError" style="color: red;">{{model.nameError}}</label>
                 </tr>
                 <tr>
                     <td style="color: snow;">Product Type</td>
