--- a/views/insert.hbs
+++ b/views/insert.hbs
@@ -46,8 +46,8 @@
                 </tr>
                 <tr>
                     <td style="color: snow;">Product Name</td>
-                    <td><input type="text" name="txtName" required></td>
-                    <td><label id="lblNameError" style="color: red;">{{model.nameError}}</label></td>
+                    <td><label id="lblNameError" style="color: red;">{{model.nameError}}</label><input type="text" name="txtName" required></td>
+                    
                 </tr>
                 <tr>
                     <td style="color: snow;">Product Type</td>
