--- a/views/insert.hbs
+++ b/views/insert.hbs
@@ -46,7 +46,7 @@
                 </tr>
                 <tr>
                     <td style="color: snow;">Product Name</td>
-                    <td><label id="lblNameError" style="color: red;">{{model.nameError}}</label><input type="text" name="txtName" required></td>
+                    <td><input type="text" name="txtName" required><label id="lblNameError" style="color: red;">{{model.nameError}}</label></td>
                     
                 </tr>
                 <tr>
