--- a/views/insert.hbs
+++ b/views/insert.hbs
@@ -39,7 +39,7 @@
         <div style="margin-left: 400px;" class="demo">
             <h1 align="center">ADD PRODUCT</h1>
         </div>
-        <table style="margin-left: 180px; margin-top: 150px;">
+        <table style="margin-left: 180px; margin-top: 150px;" border="1">
             <form action="doInsert" method="POST">
                 <tr>
                     <td colspan="2" align="center"></td>
