--- a/views/insert.hbs
+++ b/views/insert.hbs
@@ -46,7 +46,7 @@
                 </tr>
                 <tr>
                     <td style="color: snow;">Product Name</td>
-                    <td><input type="text" name="txtName" required><label id="lblNameError" style="color: red;">{{model.nameError}}</label></td>
+                    <td><input type="text" name="txtName" required></td>
                     
                 </tr>
                 <tr>
@@ -55,7 +55,7 @@
                 </tr>
                 <tr>
                     <td style="color: snow;">Product Price (VND) </td>
-                    <td><input type="text" name="txtPrice"></td>
+                    <td><input type="text" name="txtPrice"><label id="PriceError" style="color: red;">{{model.priceError}}</label></td>
                 </tr>
                 <tr>
                     <br>
