--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,7 +22,7 @@
     <h1 align="center"> ADMIN CONTROL CENTER</h1>
     <button><a href="/insert">New Product</a></button>
     <button><a href="/">Home Page</a></button>
-    <form action="/Research" method="get">
+    <form action="/Search" method="get">
         Search: <input type="text" name="txtName" id="" placeholder="Enter your name...">
         <input type="submit" value="Search">
     </form>
